cdk/apps/springbootsample/k8.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: springbootsample
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: springbootsample
  name: ingress-springbootsample
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:899456967600:certificate/e355d30c-7dcf-4965-8f23-ca3f6b491641
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: yourdomain.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-springbootsample
              port:
                number: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: springbootsample
  name: service-springbootsample
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-springbootsample
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: springbootsample
  name: deployment-springbootsample
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-springbootsample
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-springbootsample
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: api-server
      containers:
      - image: 899456967600.dkr.ecr.us-east-2.amazonaws.com/springboot-multiarch:901139e
        imagePullPolicy: Always
        name: springbootsample
        ports:
        - containerPort: 8080
          protocol: TCP
